// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual regression - HomeView markup snapshots > HomeView matches snapshot @ desktop-1440 1`] = `
<div
  class="flex-1 overflow-y-auto bg-background"
  data-testid="home-view"
>
  <header
    class="sticky top-0 z-20 backdrop-blur bg-background/85 border-b border-border"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-8 h-14 flex items-center justify-between gap-3"
    >
      <div
        class="flex items-center gap-1 min-w-0"
      >
        <button
          class="flex items-center gap-2 min-w-0 group"
          title="Back to website"
          type="button"
        >
          <img
            alt="Notespace"
            class="h-[1.4rem] w-[1.4rem] sm:h-[1.6rem] sm:w-[1.6rem] object-contain flex-shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
            src="/logo.png"
          />
          <span
            class="font-serif font-bold text-foreground text-base sm:text-lg whitespace-nowrap group-hover:text-primary transition-colors"
          >
            Notespace
          </span>
        </button>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <button
          aria-controls="radix-:r10:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Account menu"
          class="relative inline-flex items-center justify-center h-9 w-9 rounded-full bg-primary/10 text-primary text-xs font-semibold ring-1 ring-primary/20 hover:ring-primary/40 hover:bg-primary/15 transition-all"
          data-state="closed"
          type="button"
        >
          U
        </button>
      </div>
    </div>
  </header>
  <div
    class="relative border-b border-border overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/[0.06] via-transparent to-primary/[0.04] pointer-events-none"
    />
    <div
      class="absolute inset-0 opacity-[0.025] pointer-events-none"
      style="background-size: 24px 24px;"
    />
    <div
      class="relative max-w-7xl mx-auto px-4 sm:px-8 py-[1.65rem] sm:py-[2.2rem] flex items-center justify-between gap-8"
    >
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-[11px] uppercase tracking-[0.25em] text-primary/80 font-mono mb-2"
        >
          ◆ Your Library
        </p>
        <h1
          class="font-serif text-2xl sm:text-4xl font-bold text-foreground tracking-tight break-words"
        >
          Welcome back.
        </h1>
        <p
          class="text-sm text-muted-foreground mt-2 max-w-xl"
        >
          1
           
          notebook
           · 
          0
           
          notes
          . Pick one up where you left off.
        </p>
        <div
          class="flex flex-wrap items-center gap-2 mt-6"
        >
          <button
            class="inline-flex min-w-[8rem] sm:min-w-[10.5rem] items-center justify-center gap-2 px-3 sm:px-4 py-2.5 rounded-xl border border-primary/30 bg-primary/[0.06] text-primary text-sm font-medium hover:bg-primary/[0.12] transition-all duration-150 active:scale-[0.97]"
            data-testid="home-upload"
            title="Upload a file (PDF, EPUB, DOCX, TXT, MD, CSV, JSON, images - up to 1 GB)."
          >
            <svg
              class="lucide lucide-upload h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="17 8 12 3 7 8"
              />
              <line
                x1="12"
                x2="12"
                y1="3"
                y2="15"
              />
            </svg>
            <span
              class="sm:hidden"
            >
              Upload
            </span>
            <span
              class="hidden sm:inline"
            >
              Upload a file
            </span>
          </button>
          <input
            accept=".png,.jpg,.jpeg,.gif,.webp,.pdf,.epub,.txt,.md,.markdown,.csv,.json,.doc,.docx,.xls,.xlsx,.mp4,.mov,.webm,image/*,video/mp4,video/quicktime,video/webm,application/pdf,application/epub+zip,text/plain,text/markdown,text/csv,application/json,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
            class="hidden"
            type="file"
          />
        </div>
        <div
          class="flex flex-col sm:flex-row gap-3 mt-7 sm:items-center"
        >
          <div
            class="relative flex-1 max-w-md"
          >
            <input
              aria-label="Search notebooks"
              class="w-full px-4 py-2.5 rounded-xl border border-border bg-card/80 backdrop-blur text-sm text-foreground placeholder:text-muted-foreground outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary/40 transition-all"
              placeholder="Search notebooks…"
              value=""
            />
          </div>
          <div
            aria-label="Sort notebooks"
            class="flex w-full sm:inline-flex sm:w-auto items-center gap-1 p-1 rounded-xl border border-border bg-card/80 backdrop-blur"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors bg-primary text-primary-foreground shadow-sm"
              role="tab"
            >
              <svg
                class="lucide lucide-clock h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              Newest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-up-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 8 4-4 4 4"
                />
                <path
                  d="M7 4v16"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Oldest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-down-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 16 4 4 4-4"
                />
                <path
                  d="M7 20V4"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Title
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="relative hidden lg:block w-[340px] shrink-0 select-none mr-4"
      >
        <div
          animate="[object Object]"
          class="relative h-[212px] rounded-[6px] bg-card overflow-hidden border border-foreground/10 shadow-[0_10px_24px_-16px_hsl(var(--foreground)/0.35)]"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="absolute inset-0"
          />
          <div
            class="absolute inset-y-0 left-[46px] w-px bg-ochre/35"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 30px; width: 216px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 56px; width: 182px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 82px; width: 204px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 108px; width: 148px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 134px; width: 196px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 160px; width: 126px;"
            transition="[object Object]"
          />
          <svg
            class="absolute inset-0 h-full w-full"
            fill="none"
            viewBox="0 0 340 212"
          >
            <path
              animate="[object Object]"
              d="M30 50 C22 54, 22 84, 30 88"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--foreground) / 0.55)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M16 118 L38 112"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M32 108 L39 112 L33 117"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M58 146 C110 143, 190 145, 252 142"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M22 168 L29 175 L40 160"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-8 py-8 sm:py-10"
  >
    <div
      aria-label="Notebooks"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4"
      role="grid"
    >
      <div
        animate="[object Object]"
        class="group relative rounded-2xl border border-border bg-card overflow-hidden hover:border-primary/40 hover:shadow-xl hover:shadow-primary/5 transition-all duration-300"
        initial="[object Object]"
        transition="[object Object]"
        whilehover="[object Object]"
      >
        <button
          aria-label="Delete Sample"
          class="absolute top-2 right-2 z-10 opacity-0 group-hover:opacity-100 focus:opacity-100 p-1.5 rounded-lg bg-background/80 backdrop-blur text-muted-foreground hover:bg-rose-500/10 hover:text-rose-600 dark:hover:text-rose-400 transition-all"
          title="Move to Trash"
          type="button"
        >
          <svg
            class="lucide lucide-trash2 h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 6h18"
            />
            <path
              d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
            />
            <path
              d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </button>
        <button
          class="w-full text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background rounded-2xl"
          role="gridcell"
          tabindex="0"
          type="button"
        >
          <div
            class="absolute left-0 top-0 bottom-0 w-1 bg-gradient-to-b from-primary/60 via-primary/40 to-primary/20 opacity-70 group-hover:opacity-100 transition-opacity"
          />
          <div
            class="p-5"
          >
            <div
              class="flex items-start justify-between gap-3 mb-3"
            >
              <div
                class="text-3xl leading-none transform group-hover:scale-110 group-hover:-rotate-3 transition-transform duration-300 origin-bottom-left"
              >
                📓
              </div>
              <span
                class="text-[10px] font-mono uppercase tracking-wider text-muted-foreground bg-muted/50 px-2 py-0.5 rounded-full"
              >
                0 notes
              </span>
            </div>
            <h3
              class="font-serif font-bold text-base text-foreground mb-2 group-hover:text-primary transition-colors line-clamp-1"
            >
              Sample
            </h3>
            <p
              class="text-[11px] text-muted-foreground italic mb-3"
            >
              Empty notebook
            </p>
            <div
              class="text-[10px] text-muted-foreground/70 font-mono pt-2 border-t border-border/60"
            >
              Updated 
              Jan 1, 2025
            </div>
          </div>
        </button>
      </div>
    </div>
    <p
      class="text-center text-xs text-muted-foreground mt-6 font-mono"
    >
      Showing 
      1
       of 
      1
    </p>
  </div>
</div>
`;

exports[`Visual regression - HomeView markup snapshots > HomeView matches snapshot @ mobile-375 1`] = `
<div
  class="flex-1 overflow-y-auto bg-background"
  data-testid="home-view"
>
  <header
    class="sticky top-0 z-20 backdrop-blur bg-background/85 border-b border-border"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-8 h-14 flex items-center justify-between gap-3"
    >
      <div
        class="flex items-center gap-1 min-w-0"
      >
        <button
          class="flex items-center gap-2 min-w-0 group"
          title="Back to website"
          type="button"
        >
          <img
            alt="Notespace"
            class="h-[1.4rem] w-[1.4rem] sm:h-[1.6rem] sm:w-[1.6rem] object-contain flex-shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
            src="/logo.png"
          />
          <span
            class="font-serif font-bold text-foreground text-base sm:text-lg whitespace-nowrap group-hover:text-primary transition-colors"
          >
            Notespace
          </span>
        </button>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <button
          aria-controls="radix-:r0:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Account menu"
          class="relative inline-flex items-center justify-center h-9 w-9 rounded-full bg-primary/10 text-primary text-xs font-semibold ring-1 ring-primary/20 hover:ring-primary/40 hover:bg-primary/15 transition-all"
          data-state="closed"
          type="button"
        >
          U
        </button>
      </div>
    </div>
  </header>
  <div
    class="relative border-b border-border overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/[0.06] via-transparent to-primary/[0.04] pointer-events-none"
    />
    <div
      class="absolute inset-0 opacity-[0.025] pointer-events-none"
      style="background-size: 24px 24px;"
    />
    <div
      class="relative max-w-7xl mx-auto px-4 sm:px-8 py-[1.65rem] sm:py-[2.2rem] flex items-center justify-between gap-8"
    >
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-[11px] uppercase tracking-[0.25em] text-primary/80 font-mono mb-2"
        >
          ◆ Your Library
        </p>
        <h1
          class="font-serif text-2xl sm:text-4xl font-bold text-foreground tracking-tight break-words"
        >
          Welcome back.
        </h1>
        <p
          class="text-sm text-muted-foreground mt-2 max-w-xl"
        >
          1
           
          notebook
           · 
          0
           
          notes
          . Pick one up where you left off.
        </p>
        <div
          class="flex flex-wrap items-center gap-2 mt-6"
        >
          <button
            class="inline-flex min-w-[8rem] sm:min-w-[10.5rem] items-center justify-center gap-2 px-3 sm:px-4 py-2.5 rounded-xl border border-primary/30 bg-primary/[0.06] text-primary text-sm font-medium hover:bg-primary/[0.12] transition-all duration-150 active:scale-[0.97]"
            data-testid="home-upload"
            title="Upload a file (PDF, EPUB, DOCX, TXT, MD, CSV, JSON, images - up to 1 GB)."
          >
            <svg
              class="lucide lucide-upload h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="17 8 12 3 7 8"
              />
              <line
                x1="12"
                x2="12"
                y1="3"
                y2="15"
              />
            </svg>
            <span
              class="sm:hidden"
            >
              Upload
            </span>
            <span
              class="hidden sm:inline"
            >
              Upload a file
            </span>
          </button>
          <input
            accept=".png,.jpg,.jpeg,.gif,.webp,.pdf,.epub,.txt,.md,.markdown,.csv,.json,.doc,.docx,.xls,.xlsx,.mp4,.mov,.webm,image/*,video/mp4,video/quicktime,video/webm,application/pdf,application/epub+zip,text/plain,text/markdown,text/csv,application/json,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
            class="hidden"
            type="file"
          />
        </div>
        <div
          class="flex flex-col sm:flex-row gap-3 mt-7 sm:items-center"
        >
          <div
            class="relative flex-1 max-w-md"
          >
            <input
              aria-label="Search notebooks"
              class="w-full px-4 py-2.5 rounded-xl border border-border bg-card/80 backdrop-blur text-sm text-foreground placeholder:text-muted-foreground outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary/40 transition-all"
              placeholder="Search notebooks…"
              value=""
            />
          </div>
          <div
            aria-label="Sort notebooks"
            class="flex w-full sm:inline-flex sm:w-auto items-center gap-1 p-1 rounded-xl border border-border bg-card/80 backdrop-blur"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors bg-primary text-primary-foreground shadow-sm"
              role="tab"
            >
              <svg
                class="lucide lucide-clock h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              Newest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-up-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 8 4-4 4 4"
                />
                <path
                  d="M7 4v16"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Oldest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-down-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 16 4 4 4-4"
                />
                <path
                  d="M7 20V4"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Title
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="relative hidden lg:block w-[340px] shrink-0 select-none mr-4"
      >
        <div
          animate="[object Object]"
          class="relative h-[212px] rounded-[6px] bg-card overflow-hidden border border-foreground/10 shadow-[0_10px_24px_-16px_hsl(var(--foreground)/0.35)]"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="absolute inset-0"
          />
          <div
            class="absolute inset-y-0 left-[46px] w-px bg-ochre/35"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 30px; width: 216px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 56px; width: 182px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 82px; width: 204px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 108px; width: 148px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 134px; width: 196px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 160px; width: 126px;"
            transition="[object Object]"
          />
          <svg
            class="absolute inset-0 h-full w-full"
            fill="none"
            viewBox="0 0 340 212"
          >
            <path
              animate="[object Object]"
              d="M30 50 C22 54, 22 84, 30 88"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--foreground) / 0.55)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M16 118 L38 112"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M32 108 L39 112 L33 117"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M58 146 C110 143, 190 145, 252 142"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M22 168 L29 175 L40 160"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-8 py-8 sm:py-10"
  >
    <div
      aria-label="Notebooks"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4"
      role="grid"
    >
      <div
        animate="[object Object]"
        class="group relative rounded-2xl border border-border bg-card overflow-hidden hover:border-primary/40 hover:shadow-xl hover:shadow-primary/5 transition-all duration-300"
        initial="[object Object]"
        transition="[object Object]"
        whilehover="[object Object]"
      >
        <button
          aria-label="Delete Sample"
          class="absolute top-2 right-2 z-10 opacity-0 group-hover:opacity-100 focus:opacity-100 p-1.5 rounded-lg bg-background/80 backdrop-blur text-muted-foreground hover:bg-rose-500/10 hover:text-rose-600 dark:hover:text-rose-400 transition-all"
          title="Move to Trash"
          type="button"
        >
          <svg
            class="lucide lucide-trash2 h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 6h18"
            />
            <path
              d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
            />
            <path
              d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </button>
        <button
          class="w-full text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background rounded-2xl"
          role="gridcell"
          tabindex="0"
          type="button"
        >
          <div
            class="absolute left-0 top-0 bottom-0 w-1 bg-gradient-to-b from-primary/60 via-primary/40 to-primary/20 opacity-70 group-hover:opacity-100 transition-opacity"
          />
          <div
            class="p-5"
          >
            <div
              class="flex items-start justify-between gap-3 mb-3"
            >
              <div
                class="text-3xl leading-none transform group-hover:scale-110 group-hover:-rotate-3 transition-transform duration-300 origin-bottom-left"
              >
                📓
              </div>
              <span
                class="text-[10px] font-mono uppercase tracking-wider text-muted-foreground bg-muted/50 px-2 py-0.5 rounded-full"
              >
                0 notes
              </span>
            </div>
            <h3
              class="font-serif font-bold text-base text-foreground mb-2 group-hover:text-primary transition-colors line-clamp-1"
            >
              Sample
            </h3>
            <p
              class="text-[11px] text-muted-foreground italic mb-3"
            >
              Empty notebook
            </p>
            <div
              class="text-[10px] text-muted-foreground/70 font-mono pt-2 border-t border-border/60"
            >
              Updated 
              Jan 1, 2025
            </div>
          </div>
        </button>
      </div>
    </div>
    <p
      class="text-center text-xs text-muted-foreground mt-6 font-mono"
    >
      Showing 
      1
       of 
      1
    </p>
  </div>
</div>
`;

exports[`Visual regression - HomeView markup snapshots > HomeView matches snapshot @ tablet-820 1`] = `
<div
  class="flex-1 overflow-y-auto bg-background"
  data-testid="home-view"
>
  <header
    class="sticky top-0 z-20 backdrop-blur bg-background/85 border-b border-border"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-8 h-14 flex items-center justify-between gap-3"
    >
      <div
        class="flex items-center gap-1 min-w-0"
      >
        <button
          class="flex items-center gap-2 min-w-0 group"
          title="Back to website"
          type="button"
        >
          <img
            alt="Notespace"
            class="h-[1.4rem] w-[1.4rem] sm:h-[1.6rem] sm:w-[1.6rem] object-contain flex-shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
            src="/logo.png"
          />
          <span
            class="font-serif font-bold text-foreground text-base sm:text-lg whitespace-nowrap group-hover:text-primary transition-colors"
          >
            Notespace
          </span>
        </button>
      </div>
      <div
        class="flex items-center gap-1"
      >
        <button
          aria-controls="radix-:rg:"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Account menu"
          class="relative inline-flex items-center justify-center h-9 w-9 rounded-full bg-primary/10 text-primary text-xs font-semibold ring-1 ring-primary/20 hover:ring-primary/40 hover:bg-primary/15 transition-all"
          data-state="closed"
          type="button"
        >
          U
        </button>
      </div>
    </div>
  </header>
  <div
    class="relative border-b border-border overflow-hidden"
  >
    <div
      class="absolute inset-0 bg-gradient-to-br from-primary/[0.06] via-transparent to-primary/[0.04] pointer-events-none"
    />
    <div
      class="absolute inset-0 opacity-[0.025] pointer-events-none"
      style="background-size: 24px 24px;"
    />
    <div
      class="relative max-w-7xl mx-auto px-4 sm:px-8 py-[1.65rem] sm:py-[2.2rem] flex items-center justify-between gap-8"
    >
      <div
        class="min-w-0 flex-1"
      >
        <p
          class="text-[11px] uppercase tracking-[0.25em] text-primary/80 font-mono mb-2"
        >
          ◆ Your Library
        </p>
        <h1
          class="font-serif text-2xl sm:text-4xl font-bold text-foreground tracking-tight break-words"
        >
          Welcome back.
        </h1>
        <p
          class="text-sm text-muted-foreground mt-2 max-w-xl"
        >
          1
           
          notebook
           · 
          0
           
          notes
          . Pick one up where you left off.
        </p>
        <div
          class="flex flex-wrap items-center gap-2 mt-6"
        >
          <button
            class="inline-flex min-w-[8rem] sm:min-w-[10.5rem] items-center justify-center gap-2 px-3 sm:px-4 py-2.5 rounded-xl border border-primary/30 bg-primary/[0.06] text-primary text-sm font-medium hover:bg-primary/[0.12] transition-all duration-150 active:scale-[0.97]"
            data-testid="home-upload"
            title="Upload a file (PDF, EPUB, DOCX, TXT, MD, CSV, JSON, images - up to 1 GB)."
          >
            <svg
              class="lucide lucide-upload h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="17 8 12 3 7 8"
              />
              <line
                x1="12"
                x2="12"
                y1="3"
                y2="15"
              />
            </svg>
            <span
              class="sm:hidden"
            >
              Upload
            </span>
            <span
              class="hidden sm:inline"
            >
              Upload a file
            </span>
          </button>
          <input
            accept=".png,.jpg,.jpeg,.gif,.webp,.pdf,.epub,.txt,.md,.markdown,.csv,.json,.doc,.docx,.xls,.xlsx,.mp4,.mov,.webm,image/*,video/mp4,video/quicktime,video/webm,application/pdf,application/epub+zip,text/plain,text/markdown,text/csv,application/json,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
            class="hidden"
            type="file"
          />
        </div>
        <div
          class="flex flex-col sm:flex-row gap-3 mt-7 sm:items-center"
        >
          <div
            class="relative flex-1 max-w-md"
          >
            <input
              aria-label="Search notebooks"
              class="w-full px-4 py-2.5 rounded-xl border border-border bg-card/80 backdrop-blur text-sm text-foreground placeholder:text-muted-foreground outline-none focus:ring-2 focus:ring-primary/30 focus:border-primary/40 transition-all"
              placeholder="Search notebooks…"
              value=""
            />
          </div>
          <div
            aria-label="Sort notebooks"
            class="flex w-full sm:inline-flex sm:w-auto items-center gap-1 p-1 rounded-xl border border-border bg-card/80 backdrop-blur"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors bg-primary text-primary-foreground shadow-sm"
              role="tab"
            >
              <svg
                class="lucide lucide-clock h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              Newest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-up-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 8 4-4 4 4"
                />
                <path
                  d="M7 4v16"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Oldest
            </button>
            <button
              aria-selected="false"
              class="flex-1 sm:flex-initial inline-flex items-center justify-center gap-1.5 px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-muted/60"
              role="tab"
            >
              <svg
                class="lucide lucide-arrow-down-az h-3.5 w-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m3 16 4 4 4-4"
                />
                <path
                  d="M7 20V4"
                />
                <path
                  d="M20 8h-5"
                />
                <path
                  d="M15 10V6.5a2.5 2.5 0 0 1 5 0V10"
                />
                <path
                  d="M15 14h5l-5 6h5"
                />
              </svg>
              Title
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="relative hidden lg:block w-[340px] shrink-0 select-none mr-4"
      >
        <div
          animate="[object Object]"
          class="relative h-[212px] rounded-[6px] bg-card overflow-hidden border border-foreground/10 shadow-[0_10px_24px_-16px_hsl(var(--foreground)/0.35)]"
          initial="[object Object]"
          transition="[object Object]"
        >
          <div
            class="absolute inset-0"
          />
          <div
            class="absolute inset-y-0 left-[46px] w-px bg-ochre/35"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 30px; width: 216px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 56px; width: 182px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 82px; width: 204px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 108px; width: 148px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 134px; width: 196px;"
            transition="[object Object]"
          />
          <div
            animate="[object Object]"
            class="absolute h-[7px] rounded-[2px] bg-foreground/20"
            initial="[object Object]"
            style="left: 58px; top: 160px; width: 126px;"
            transition="[object Object]"
          />
          <svg
            class="absolute inset-0 h-full w-full"
            fill="none"
            viewBox="0 0 340 212"
          >
            <path
              animate="[object Object]"
              d="M30 50 C22 54, 22 84, 30 88"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--foreground) / 0.55)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M16 118 L38 112"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M32 108 L39 112 L33 117"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--sage))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M58 146 C110 143, 190 145, 252 142"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
            <path
              animate="[object Object]"
              d="M22 168 L29 175 L40 160"
              fill="none"
              initial="[object Object]"
              stroke="hsl(var(--ochre))"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              transition="[object Object]"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-8 py-8 sm:py-10"
  >
    <div
      aria-label="Notebooks"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4"
      role="grid"
    >
      <div
        animate="[object Object]"
        class="group relative rounded-2xl border border-border bg-card overflow-hidden hover:border-primary/40 hover:shadow-xl hover:shadow-primary/5 transition-all duration-300"
        initial="[object Object]"
        transition="[object Object]"
        whilehover="[object Object]"
      >
        <button
          aria-label="Delete Sample"
          class="absolute top-2 right-2 z-10 opacity-0 group-hover:opacity-100 focus:opacity-100 p-1.5 rounded-lg bg-background/80 backdrop-blur text-muted-foreground hover:bg-rose-500/10 hover:text-rose-600 dark:hover:text-rose-400 transition-all"
          title="Move to Trash"
          type="button"
        >
          <svg
            class="lucide lucide-trash2 h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 6h18"
            />
            <path
              d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
            />
            <path
              d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
            />
            <line
              x1="10"
              x2="10"
              y1="11"
              y2="17"
            />
            <line
              x1="14"
              x2="14"
              y1="11"
              y2="17"
            />
          </svg>
        </button>
        <button
          class="w-full text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:ring-offset-background rounded-2xl"
          role="gridcell"
          tabindex="0"
          type="button"
        >
          <div
            class="absolute left-0 top-0 bottom-0 w-1 bg-gradient-to-b from-primary/60 via-primary/40 to-primary/20 opacity-70 group-hover:opacity-100 transition-opacity"
          />
          <div
            class="p-5"
          >
            <div
              class="flex items-start justify-between gap-3 mb-3"
            >
              <div
                class="text-3xl leading-none transform group-hover:scale-110 group-hover:-rotate-3 transition-transform duration-300 origin-bottom-left"
              >
                📓
              </div>
              <span
                class="text-[10px] font-mono uppercase tracking-wider text-muted-foreground bg-muted/50 px-2 py-0.5 rounded-full"
              >
                0 notes
              </span>
            </div>
            <h3
              class="font-serif font-bold text-base text-foreground mb-2 group-hover:text-primary transition-colors line-clamp-1"
            >
              Sample
            </h3>
            <p
              class="text-[11px] text-muted-foreground italic mb-3"
            >
              Empty notebook
            </p>
            <div
              class="text-[10px] text-muted-foreground/70 font-mono pt-2 border-t border-border/60"
            >
              Updated 
              Jan 1, 2025
            </div>
          </div>
        </button>
      </div>
    </div>
    <p
      class="text-center text-xs text-muted-foreground mt-6 font-mono"
    >
      Showing 
      1
       of 
      1
    </p>
  </div>
</div>
`;

exports[`Visual regression - PageHeader markup snapshots > PageHeader matches snapshot @ desktop-1440 1`] = `
<header
  animate="[object Object]"
  class="fixed top-4 inset-x-0 mx-auto z-50 w-[92%] max-w-5xl transition-all duration-500 rounded-2xl bg-transparent"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="flex items-center justify-between gap-3 md:gap-6 px-3 sm:px-5 py-3"
  >
    <a
      class="flex items-center gap-2 pb-1 min-w-0 shrink-0 group"
      href="/"
    >
      <img
        alt="Notespace"
        class="h-[1.224rem] w-[1.224rem] object-contain shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
        decoding="sync"
        fetchpriority="high"
        height="32"
        loading="eager"
        src="/logo.png"
        width="32"
      />
      <span
        class="font-serif text-sm sm:text-base md:text-lg font-bold text-foreground translate-y-[1px] whitespace-nowrap leading-none"
      >
        Notespace
      </span>
    </a>
    <nav
      class="hidden md:flex items-center gap-0.5 lg:gap-1 shrink-0"
    >
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-foreground"
        href="/features"
      >
        Features
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/pricing"
      >
        Pricing
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/about"
      >
        About
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/how-it-works"
      >
        How It Works
      </a>
    </nav>
    <div
      class="flex items-center gap-2 sm:gap-3 shrink-0"
    >
      <a
        class="magnetic-btn inline-flex items-center gap-1.5 rounded-xl bg-primary px-3 sm:px-4 py-1.5 sm:py-2 text-[13px] sm:text-sm font-medium text-primary-foreground shadow-md shadow-primary/20 whitespace-nowrap"
        href="/auth"
      >
        Get Started
         
        <svg
          class="lucide lucide-arrow-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </a>
      <button
        aria-expanded="false"
        aria-label="Open menu"
        class="md:hidden p-1.5 rounded-xl text-muted-foreground hover:text-foreground hover:bg-muted/50 transition-colors shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="4"
            x2="20"
            y1="12"
            y2="12"
          />
          <line
            x1="4"
            x2="20"
            y1="6"
            y2="6"
          />
          <line
            x1="4"
            x2="20"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</header>
`;

exports[`Visual regression - PageHeader markup snapshots > PageHeader matches snapshot @ mobile-375 1`] = `
<header
  animate="[object Object]"
  class="fixed top-4 inset-x-0 mx-auto z-50 w-[92%] max-w-5xl transition-all duration-500 rounded-2xl bg-transparent"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="flex items-center justify-between gap-3 md:gap-6 px-3 sm:px-5 py-3"
  >
    <a
      class="flex items-center gap-2 pb-1 min-w-0 shrink-0 group"
      href="/"
    >
      <img
        alt="Notespace"
        class="h-[1.224rem] w-[1.224rem] object-contain shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
        decoding="sync"
        fetchpriority="high"
        height="32"
        loading="eager"
        src="/logo.png"
        width="32"
      />
      <span
        class="font-serif text-sm sm:text-base md:text-lg font-bold text-foreground translate-y-[1px] whitespace-nowrap leading-none"
      >
        Notespace
      </span>
    </a>
    <nav
      class="hidden md:flex items-center gap-0.5 lg:gap-1 shrink-0"
    >
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-foreground"
        href="/features"
      >
        Features
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/pricing"
      >
        Pricing
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/about"
      >
        About
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/how-it-works"
      >
        How It Works
      </a>
    </nav>
    <div
      class="flex items-center gap-2 sm:gap-3 shrink-0"
    >
      <a
        class="magnetic-btn inline-flex items-center gap-1.5 rounded-xl bg-primary px-3 sm:px-4 py-1.5 sm:py-2 text-[13px] sm:text-sm font-medium text-primary-foreground shadow-md shadow-primary/20 whitespace-nowrap"
        href="/auth"
      >
        Get Started
         
        <svg
          class="lucide lucide-arrow-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </a>
      <button
        aria-expanded="false"
        aria-label="Open menu"
        class="md:hidden p-1.5 rounded-xl text-muted-foreground hover:text-foreground hover:bg-muted/50 transition-colors shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="4"
            x2="20"
            y1="12"
            y2="12"
          />
          <line
            x1="4"
            x2="20"
            y1="6"
            y2="6"
          />
          <line
            x1="4"
            x2="20"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</header>
`;

exports[`Visual regression - PageHeader markup snapshots > PageHeader matches snapshot @ tablet-820 1`] = `
<header
  animate="[object Object]"
  class="fixed top-4 inset-x-0 mx-auto z-50 w-[92%] max-w-5xl transition-all duration-500 rounded-2xl bg-transparent"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="flex items-center justify-between gap-3 md:gap-6 px-3 sm:px-5 py-3"
  >
    <a
      class="flex items-center gap-2 pb-1 min-w-0 shrink-0 group"
      href="/"
    >
      <img
        alt="Notespace"
        class="h-[1.224rem] w-[1.224rem] object-contain shrink-0 transition-transform duration-300 group-hover:scale-110 group-hover:-rotate-6"
        decoding="sync"
        fetchpriority="high"
        height="32"
        loading="eager"
        src="/logo.png"
        width="32"
      />
      <span
        class="font-serif text-sm sm:text-base md:text-lg font-bold text-foreground translate-y-[1px] whitespace-nowrap leading-none"
      >
        Notespace
      </span>
    </a>
    <nav
      class="hidden md:flex items-center gap-0.5 lg:gap-1 shrink-0"
    >
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-foreground"
        href="/features"
      >
        Features
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/pricing"
      >
        Pricing
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/about"
      >
        About
      </a>
      <a
        class="px-2.5 lg:px-3.5 py-1.5 rounded-xl text-[13px] lg:text-sm font-medium whitespace-nowrap transition-all duration-200 text-muted-foreground hover:text-foreground hover:bg-muted/50"
        href="/how-it-works"
      >
        How It Works
      </a>
    </nav>
    <div
      class="flex items-center gap-2 sm:gap-3 shrink-0"
    >
      <a
        class="magnetic-btn inline-flex items-center gap-1.5 rounded-xl bg-primary px-3 sm:px-4 py-1.5 sm:py-2 text-[13px] sm:text-sm font-medium text-primary-foreground shadow-md shadow-primary/20 whitespace-nowrap"
        href="/auth"
      >
        Get Started
         
        <svg
          class="lucide lucide-arrow-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </a>
      <button
        aria-expanded="false"
        aria-label="Open menu"
        class="md:hidden p-1.5 rounded-xl text-muted-foreground hover:text-foreground hover:bg-muted/50 transition-colors shrink-0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-menu h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="4"
            x2="20"
            y1="12"
            y2="12"
          />
          <line
            x1="4"
            x2="20"
            y1="6"
            y2="6"
          />
          <line
            x1="4"
            x2="20"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </div>
</header>
`;
